Fix issue where one of the type of Category was displaying wrong color in Dark/Light theme
- Add notification when theme change for future usage (reference #88)

--- a/Super.Human.Portal_Royale/src/resources/themes/dark/defaults.css
+++ b/Super.Human.Portal_Royale/src/resources/themes/dark/defaults.css
@@ -638,6 +638,10 @@ a font {
 	color: #d9534f !important;
 }
 
+.jewel.label.multiline.categoryLabel {
+	color: #FFFFFF !important;
+}
+
 .layout.horizontal.bookmarkTitleContainer {
     background: #1ca8dd;
 	border-radius: 0.25rem;
