--- a/Super.Human.Portal_Royale/src/resources/themes/light/defaults.css
+++ b/Super.Human.Portal_Royale/src/resources/themes/light/defaults.css
@@ -397,6 +397,10 @@
 	color: #EC1C24 !important;
 }
 
+.jewel.label.multiline.categoryLabel {
+	color: #333333 !important;
+}
+
 .jewel.card.cardTile {
 	background: none !important;
 	border: none !important;
